src/test/deca/context/valid/minus_float_minus_float_minus_int_context.deca
// Description : 
// 
//      Test contextuellement correct de la soustraction de deux floats avec un int
// 
// Résultats : 
// 
//      N/A 
// 
// Historique : 
// 
//      Créé le 07/06/2023 par le gl03

{
    float y =3.5-2.8-5;
}