src/test/deca/context/invalid/blt_boolean_blt_float.deca
// Description :
// 
//      Test syntaxiquement correct de true<2.5
// 
// Résultats : 
// 
//      N/A
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    boolean y = true<2.5;
}

